src/main/java/com/example/Structural/Bridge/bad/BlueSquareShape.java
package com.example.Structural.Bridge.bad;

public class BlueSquareShape implements Shape{
    @Override
    public String getShape() {
        return "This is a Blue square shape!";
    }
}
